--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ wasm-bindgen-futures = "0.4"
 anyhow = "*"
 nom = "7"
 
+serde = "1"
+serde_json = "1"
+
 [dependencies.web-sys]
 version = "0.3"
 features = ["Request"]
